@@ -27,6 +27,8 @@ final class SystemJvmOptions {
              * networkaddress.cache.negative ttl; set to -1 to cache forever.
              */
             "-Des.networkaddress.cache.negative.ttl=10",
+            // Allow to set the security manager.
+            "-Djava.security.manager=allow",
             // pre-touch JVM emory pages during initialization
             "-XX:+AlwaysPreTouch",
             // explicitly set the stack size
